src/generated/ownParser.java
// Generated from C:/Users/julio/Desktop/ProyectoII/src\ownParser.g4 by ANTLR 4.7
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ownParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PyCOMA=1, COMA=2, CIZQ=3, CDER=4, PIZQ=5, PDER=6, LIZQ=7, LDER=8, DOSPUN=9, 
		MENOR=10, MAYOR=11, MENORIGUAL=12, MAYORIGUAL=13, ASSIGN=14, IGUALCOMP=15, 
		SUM=16, SUB=17, MUL=18, DIV=19, LET=20, RETURN=21, LEN=22, FIRST=23, LAST=24, 
		REST=25, PUSH=26, FN=27, PUTS=28, IF=29, ELSE=30, TRUE=31, FALSE=32, ID=33, 
		INTEGER=34, STRING=35, LINE_COMMENT=36, SPECIAL_COMMENT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_letStatement = 2, RULE_returnStatement = 3, 
		RULE_expressionStatement = 4, RULE_expression = 5, RULE_comparison = 6, 
		RULE_additionExpression = 7, RULE_additionFactor = 8, RULE_multiplicationExpression = 9, 
		RULE_multiplicationFactor = 10, RULE_elementExpression = 11, RULE_elementAccess = 12, 
		RULE_callExpression = 13, RULE_primitiveExpression = 14, RULE_arrayFunctions = 15, 
		RULE_arrayLiteral = 16, RULE_functionLiteral = 17, RULE_functionParameters = 18, 
		RULE_hashLiteral = 19, RULE_hashContent = 20, RULE_moreHashContent = 21, 
		RULE_expressionList = 22, RULE_printExpression = 23, RULE_ifExpression = 24, 
		RULE_blockStatement = 25, RULE_identifier = 26;
	public static final String[] ruleNames = {
		"program", "statement", "letStatement", "returnStatement", "expressionStatement", 
		"expression", "comparison", "additionExpression", "additionFactor", "multiplicationExpression", 
		"multiplicationFactor", "elementExpression", "elementAccess", "callExpression", 
		"primitiveExpression", "arrayFunctions", "arrayLiteral", "functionLiteral", 
		"functionParameters", "hashLiteral", "hashContent", "moreHashContent", 
		"expressionList", "printExpression", "ifExpression", "blockStatement", 
		"identifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'['", "']'", "'('", "')'", "'{'", "'}'", "':'", "'<'", 
		"'>'", "'<='", "'>='", "'='", "'=='", "'+'", "'-'", "'*'", "'/'", "'let'", 
		"'return'", "'len'", "'first'", "'last'", "'rest'", "'push'", "'fn'", 
		"'puts'", "'if'", "'else'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PyCOMA", "COMA", "CIZQ", "CDER", "PIZQ", "PDER", "LIZQ", "LDER", 
		"DOSPUN", "MENOR", "MAYOR", "MENORIGUAL", "MAYORIGUAL", "ASSIGN", "IGUALCOMP", 
		"SUM", "SUB", "MUL", "DIV", "LET", "RETURN", "LEN", "FIRST", "LAST", "REST", 
		"PUSH", "FN", "PUTS", "IF", "ELSE", "TRUE", "FALSE", "ID", "INTEGER", 
		"STRING", "LINE_COMMENT", "SPECIAL_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ownParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ownParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgMonkeyContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgMonkeyContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterProgMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitProgMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitProgMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgMonkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CIZQ) | (1L << PIZQ) | (1L << LIZQ) | (1L << LET) | (1L << RETURN) | (1L << LEN) | (1L << FIRST) | (1L << LAST) | (1L << REST) | (1L << PUSH) | (1L << FN) | (1L << PUTS) | (1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << INTEGER) | (1L << STRING))) != 0)) {
				{
				{
				setState(54);
				statement();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StLetMonkeyContext extends StatementContext {
		public TerminalNode LET() { return getToken(ownParser.LET, 0); }
		public LetStatementContext letStatement() {
			return getRuleContext(LetStatementContext.class,0);
		}
		public StLetMonkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterStLetMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitStLetMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitStLetMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StExprMonkeyContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StExprMonkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterStExprMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitStExprMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitStExprMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StRtnMonkeyContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(ownParser.RETURN, 0); }
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StRtnMonkeyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterStRtnMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitStRtnMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitStRtnMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				_localctx = new StLetMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(LET);
				setState(61);
				letStatement();
				}
				break;
			case RETURN:
				_localctx = new StRtnMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(RETURN);
				setState(63);
				returnStatement();
				}
				break;
			case CIZQ:
			case PIZQ:
			case LIZQ:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case TRUE:
			case FALSE:
			case ID:
			case INTEGER:
			case STRING:
				_localctx = new StExprMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				expressionStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetStatementContext extends ParserRuleContext {
		public int storageIndex = 0;
		public LetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letStatement; }
	 
		public LetStatementContext() { }
		public void copyFrom(LetStatementContext ctx) {
			super.copyFrom(ctx);
			this.storageIndex = ctx.storageIndex;
		}
	}
	public static class LetStMonkeyContext extends LetStatementContext {
		public TerminalNode ID() { return getToken(ownParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(ownParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMA() { return getToken(ownParser.PyCOMA, 0); }
		public LetStMonkeyContext(LetStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterLetStMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitLetStMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitLetStMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetStatementContext letStatement() throws RecognitionException {
		LetStatementContext _localctx = new LetStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_letStatement);
		try {
			_localctx = new LetStMonkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(ID);
			setState(68);
			match(ASSIGN);
			setState(69);
			expression();
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMA:
				{
				setState(70);
				match(PyCOMA);
				}
				break;
			case EOF:
			case CIZQ:
			case PIZQ:
			case LIZQ:
			case LDER:
			case LET:
			case RETURN:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case TRUE:
			case FALSE:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RtnStMonkeyContext extends ReturnStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMA() { return getToken(ownParser.PyCOMA, 0); }
		public RtnStMonkeyContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterRtnStMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitRtnStMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitRtnStMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnStatement);
		try {
			_localctx = new RtnStMonkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			expression();
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMA:
				{
				setState(75);
				match(PyCOMA);
				}
				break;
			case EOF:
			case CIZQ:
			case PIZQ:
			case LIZQ:
			case LDER:
			case LET:
			case RETURN:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case TRUE:
			case FALSE:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
	 
		public ExpressionStatementContext() { }
		public void copyFrom(ExpressionStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprStMonkeyContext extends ExpressionStatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PyCOMA() { return getToken(ownParser.PyCOMA, 0); }
		public ExprStMonkeyContext(ExpressionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterExprStMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitExprStMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitExprStMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressionStatement);
		try {
			_localctx = new ExprStMonkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			expression();
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PyCOMA:
				{
				setState(80);
				match(PyCOMA);
				}
				break;
			case EOF:
			case CIZQ:
			case PIZQ:
			case LIZQ:
			case LDER:
			case LET:
			case RETURN:
			case LEN:
			case FIRST:
			case LAST:
			case REST:
			case PUSH:
			case FN:
			case PUTS:
			case IF:
			case TRUE:
			case FALSE:
			case ID:
			case INTEGER:
			case STRING:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprMonkeyContext extends ExpressionContext {
		public AdditionExpressionContext additionExpression() {
			return getRuleContext(AdditionExpressionContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public ExprMonkeyContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterExprMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitExprMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitExprMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			_localctx = new ExprMonkeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			additionExpression();
			setState(85);
			comparison();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
	 
		public ComparisonContext() { }
		public void copyFrom(ComparisonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CompMayMonkeyContext extends ComparisonContext {
		public List<TerminalNode> MAYOR() { return getTokens(ownParser.MAYOR); }
		public TerminalNode MAYOR(int i) {
			return getToken(ownParser.MAYOR, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public CompMayMonkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterCompMayMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitCompMayMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitCompMayMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompIgMonkeyContext extends ComparisonContext {
		public List<TerminalNode> IGUALCOMP() { return getTokens(ownParser.IGUALCOMP); }
		public TerminalNode IGUALCOMP(int i) {
			return getToken(ownParser.IGUALCOMP, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public CompIgMonkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterCompIgMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitCompIgMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitCompIgMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompMenMonkeyContext extends ComparisonContext {
		public List<TerminalNode> MENOR() { return getTokens(ownParser.MENOR); }
		public TerminalNode MENOR(int i) {
			return getToken(ownParser.MENOR, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public CompMenMonkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterCompMenMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitCompMenMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitCompMenMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompMeIMonkeyContext extends ComparisonContext {
		public List<TerminalNode> MENORIGUAL() { return getTokens(ownParser.MENORIGUAL); }
		public TerminalNode MENORIGUAL(int i) {
			return getToken(ownParser.MENORIGUAL, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public CompMeIMonkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterCompMeIMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitCompMeIMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitCompMeIMonkey(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompMaIMonkeyContext extends ComparisonContext {
		public List<TerminalNode> MAYORIGUAL() { return getTokens(ownParser.MAYORIGUAL); }
		public TerminalNode MAYORIGUAL(int i) {
			return getToken(ownParser.MAYORIGUAL, i);
		}
		public List<AdditionExpressionContext> additionExpression() {
			return getRuleContexts(AdditionExpressionContext.class);
		}
		public AdditionExpressionContext additionExpression(int i) {
			return getRuleContext(AdditionExpressionContext.class,i);
		}
		public CompMaIMonkeyContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).enterCompMaIMonkey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ownParserListener ) ((ownParserListener)listener).exitCompMaIMonkey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ownParserVisitor ) return ((ownParserVisitor<? extends T>)visitor).visitCompMaIMonkey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparison);
		int _la;
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new CompMenMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MENOR) {
					{
					{
					setState(87);
					match(MENOR);
					setState(88);
					additionExpression();
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new CompMayMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MAYOR) {
					{
					{
					setState(94);
					match(MAYOR);
					setState(95);
					additionExpression();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				_localctx = new CompMeIMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MENORIGUAL) {
					{
					{
					setState(101);
					match(MENORIGUAL);
					setState(102);
					additionExpression();
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				_localctx = new CompMaIMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MAYORIGUAL) {
					{
					{
					setState(108);
					match(MAYORIGUAL);
					setState(109);
					additionExpression();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				_localctx = new CompIgMonkeyContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IGUALCOMP) {
					{
					{
					setState(115);
					match(IGUALCOMP);
					setState(116);
					additionExpression();
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
